name:                cert-store-manager
version:             0.1.0.0
synopsis:            Certificate Store Manager for TLS HTTP Client
description:         Allows to specify a directory with TLS Certificates
                     for HTTPS Client Connections
homepage:            https://github.com/random-j-farmer/cert-store-manager
license:             BSD3
license-file:        LICENSE
author:              Random J. Farmer
maintainer:          random.j.farmer@gmail.com
copyright:           2017 Random J. Farmer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP.Client.CertMan
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , connection
                     , data-default-class
                     , http-client
                     , http-client-tls
                     , http-types
                     , tls
                     , x509-store
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/random-j-farmer/cert-store-manager
